--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -16,6 +16,7 @@
 
 \newcommand {\xtq}[1] {\begin{color}{red}{[XTQ : #1]}\end{color}}
 \newcommand{\kento}[1]{{\color{blue} [Kento: {\it #1}]}}
+\newcommand {\xtqmod}[1] {\begin{color}{magenta}{[XTQ MODIFICATION: #1]}\end{color}}
 
 %\newcommand {\xtq}[1] {}
 %start title
@@ -31,7 +32,7 @@
 		2-12-1-W8-33, Ohokayama,\\
 		Meguro-ku, Tokyo 152-8552 Japan\\
 		\kento{Use titech email address ! } \\
-	Email: belldandyxtq@gmail.com}
+	Email: Jyo.t.aa@m.titech.ac.jp}
 	\and
 	\IEEEauthorblockN{Kento Sato}
 	\IEEEauthorblockA{Center for Applied Scientific Computing\\
@@ -97,7 +98,7 @@ To explore the effectiveness of cloud-based burst buffers,
 We implement a prototype, and evaluate the system in Amazon
 EC2/S3.
 \kento{Let us describe about the modeling.}
-The experimental and simulation evaluations show that our prototype system
+The \xtqmod{quantitative} experimental and simulation evaluations show that our prototype system
 can achieve significant improvement in I/O throughput.
 \kento{Let us include ``quantitative'' results of both experimental results and
 simulation results.}
@@ -138,6 +139,8 @@ simulation results.}
 This work was performed under the auspices of the U.S. Department of Energy by
 Lawrence Livermore National Laboratory under Contract DE-AC52-07NA27344.
 (LLNL-CONF-663584-DRAFT).
+\xtqmod{ This research was supported by JST, CREST (Research Area: Advanced Core Technologies for
+Big Data Integration).}
 \kento{Please add EBD Crest acknowledgment}
 This research made use of Montage, funded by the National Aeronautics and Space Administration's
 Earth Science Technology Office, Computation Technologies Project, under
