--- a/paper/src/ref/reference.bib
+++ b/paper/src/ref/reference.bib
@@ -58,8 +58,8 @@
 } 
 	
 @webpage{AMAZON_AWS,
-	title = "AMAZON AWS",
-	organization = "AMAZON",
+	title = "Amazon AWS",
+	organization = "Amazon",
 	url = "http://aws.amazon.com/",
 	refdate = "2014-06-20"
 }
@@ -500,5 +500,43 @@ ISSN={0272-1732},}
 	title = "GXP",
 	organization ="",
 	url = "http://www.logos.ic.i.u-tokyo.ac.jp/gxp/index.php?FrontPage",
+	refdate = "",
+}
+
+@webpage{Azure,
+	title = "Azure",
+	organization ="Microsoft",
+	url = "http://azure.microsoft.com/",
+	refdate = "",
+}
+@webpage{IBM_public_cloud,
+	title = "IBM Public Cloud",
+	organization ="IBM",
+	url = "http://www.ibm.com/cloud-computing/us/en/",
+	refdate = "",
+}
+
+@webpage{oracle_cloud,
+	title = "Oracle Cloud",
+	organization ="Oracle",
+	url = "https://cloud.oracle.com/home",
+	refdate = "",
+}
+@webpage{hp_cloud,
+	title = "HP Helion Public Cloud",
+	organization ="HP",
+	url = "http://www.hpcloud.com/",
+	refdate = "",
+}
+@webpage{AWS_HPC,
+	title = "Amazon AWS HPC Instance",
+	organization ="Amazon",
+	url = "http://aws.amazon.com/hpc/",
+	refdate = "",
+}
+@webpage{MUSE,
+	title = "MUSE",
+	organization ="",
+	url = "https://github.com/kento/MUSE",
 	refdate = "",
 }
