--- a/paper/src/implementation.tex
+++ b/paper/src/implementation.tex
@@ -26,25 +26,27 @@ The architecture of our prototype is described as Figure \ref{implemetation:over
 
 In our architecture, there are three types of nodes:
 \begin{itemize}
-	\item A master node manages all I/O nodes information, maintains a set of buffered file meta data,
-	handles operation like I/O node addition and deletion etc., and interact with clients.
-	\item There are several I/O nodes response for actually storing data.
+	\item A master node manages all burst buffer nodes information, maintains a set of buffered file
+	meta data, handles operation like burst buffer node addition and deletion etc., and interact with
+	clients.
+	\item There are several burst buffer nodes response for actually storing data.
 	\item A daemon runs on each client machine serving for communication with
-	master and I/O nodes, in order to hide architecture detail from user.
+	master and burst buffer nodes, in order to hide architecture detail from user.
 \end{itemize}
 
-The shared storage system are mounted on both master and I/O nodes, both of master and I/O nodes
-have the same assess permission to the shared file system.
+The shared storage system are mounted on both master and burst buffer nodes, both of master and
+burst buffer nodes have the same assess permission to the shared file system.
 
 \subsection{File Chunk}
-In our implementation, files are usually stored in more than one I/O node depends on the files'
-size and numbers of I/O nodes available.
+In our implementation, files are usually stored in more than one burst buffer node depends on the files'
+size and numbers of burst buffer nodes available.
 \xtq{detail　chunk size}
-Files are divided into dynamic determined-size \emph{chunks}, each I/O node store one chunk.
+Files are divided into dynamic determined-size \emph{chunks}, each burst buffer node store one chunk.
 \kento{I think we should use another word instead of ``mutable''.
 ``configurable'' ?, ``dynamically changeable'', ``dynamically
 optimized size ?'' ?}
-Such one I/O node one chunk design simplified our data layout design, and operations in I/O nodes addition and deletion.
+Such one burst buffer node one chunk design simplified our data layout design, and operations in
+burst buffer nodes addition and deletion.
 \kento{I can not understand this. You mean if an application write X bytes
 of data to N of burst buffer nodes, the system divide the data into N of chunks
 with X/N bytes of size, OR totally mutable-size for each chunk ? Please send me
@@ -58,25 +60,25 @@ Applications usually generate various sizes of files, since in our architecture,
 resources, more memory means we can buffer more files, mutable size chunk design avoid the
 disadvantage of memory waste in fixed-size chunk design, and enable us just to allocate requested size of memory.
 \kento{I can not understand this because of Q1}
-However such one I/O node one chunk design and mutable size has some disadvantages.
+However such one burst buffer node one chunk design and mutable size has some disadvantages.
 First master must maintain the chunk size of each file, this put a burden on master.
 Second, for a large file the chunk size will become very large, cause a coarse-grained write back
 control, and reduce the performance gained by dirty flag.
 \kento{Q3: I can not understand why, because the chunk size is mutable. Please
 send me an email to answer as Q3} Finally, since the chunk size is decided by
-file size, and one I/O node store only one chunk, it is difficult to change buffered file size.
+file size, and one burst buffer node store only one chunk, it is difficult to change buffered file size.
 
 \subsection{Master Node}
-In our master-I/O node model, master node is the supervisor of the entire system,
+In our master-worker node model, master node is the supervisor of the entire system,
 master node is in charge of interactive with client, make file chunk placement, and handle file operations including file open, read and write.
-Master node also manages the I/O nodes and schedule events like node registration at node setup
-phase, addition and deletion.
+Master node also manages the burst buffer nodes and schedule events like node registration at node
+setup phase, addition and deletion.
 In order to master node majorly maintains following two data structures:
 \begin{itemize}
-  \item I/O nodes information: including node IP address, total memory and
+  \item burst buffer nodes information: including node IP address, total memory and
   available memory. 
   \item File meta data: including file path, file id, total file size, access control, chunk size,
-  dirty flag and a map from chunks to I/O nodes.
+  dirty flag and a map from chunks to burst buffer nodes.
 \end{itemize}
 
 Since only master has the global knowledge of file chunk placement, client must connect to master
@@ -85,7 +87,7 @@ to get these information.
 However, in such master-worker model, master is easy to become a bottleneck of the whole system,
 thus we have to minimize the master involvement in file operation, client asks master about the
 file meta data, including the chunk placement information, then client uses these information and
-connect to I/O nodes directly for sending or receiving data.
+connect to burst buffer nodes directly for sending or receiving data.
 
 \subsection{Client daemon}
 
@@ -97,7 +99,7 @@ connect to I/O nodes directly for sending or receiving data.
 \end{figure}
 
 In each compute node, there is a client daemon, which is a file system client used to buffer I/O
-data, communicate with master nodes and I/O buffer nodes, including send I/O request and send or
+data, communicate with master nodes and burst buffer nodes, including send I/O request and send or
 receive I/O data.
 Figure.~\ref{implementaion:client_daemon} is an illustration of client daemon inside client nodes
 and buffer queue in I/O burst nodes.
@@ -106,15 +108,15 @@ Applications changes data with client daemon by using mmap.
 say ``daemon'', I understand the daemon process is a different process to the
 application's process. Is it true ? Please
 send me an email to answer as Q5} Figure.~\ref{implementaion:client_daemon}
-is an illustration of client daemon inside client nodes and buffer queue in I/O burst nodes.
+is an illustration of client daemon inside client nodes and buffer queue in burst buffer nodes.
 Users don't know and should not know the information like IP address of master nodes,  client daemon
 is used to hide these information from users.
 By using client daemon, application doesn't need to change their code, just recompile with a
 library.
 As figure.~\ref{implementaion:client_daemon} shows, client daemon send open, close request to master
-node, and cache the file information including file chunk size, a map to I/O nodes.
-When applications send read and write request, daemon send the request to corresponding I/O nodes
-according to the cached information from master node, and transfer data with I/O nodes, finally
+node, and cache the file information including file chunk size, a map to burst buffer nodes.
+When applications send read and write request, daemon send the request to corresponding burst buffer nodes
+according to the cached information from master node, and transfer data with burst buffer nodes, finally
 send to applications.
 
 %When a user application issue a write request, I/O data will be buffered in that node by client
@@ -153,35 +155,35 @@ After file opened, applications can use file id to send read or write request.
 In our prototype, since the master need to manage the block allocate and de-allocate operation, all
 the read, write request should send to master.
 When master receive the request, for file opened for reading
-request for the first time, master get the file size from shared storage, and assign several I/O
-nodes to this file according to file size and then send a map from chunks to I/O node to client
-daemon, after that, master connects to corresponding I/O nodes, send allocate chunk request and
-let I/O nodes read data from shared storage.
+request for the first time, master get the file size from shared storage, and assign several burst
+buffer nodes to this file according to file size and then send a map from chunks to burst buffer
+node to client daemon, after that, master connects to corresponding burst buffer nodes, send allocate chunk request and
+let burst buffer nodes read data from shared storage.
 As for file opened in only writing since the file need to be create, master get file size from
-client daemon and assign I/O nodes after that master send I/O nodes IP address as well as the map
-information from chunks to I/O nodes to client daemon, then master connects to corresponding I/O
-nodes, send allocate chunk request.
+client daemon and assign burst buffer nodes after that master send burst buffer nodes IP address as well as the map
+information from chunks to burst buffer nodes to client daemon, then master connects to
+corresponding burst buffer nodes, send allocate chunk request.
 
-After receiving the map from chunks to I/O nodes, client daemon connect to each I/O
-nodes in the map, and start I/O with these I/O nodes.
+After receiving the map from chunks to burst buffer nodes, client daemon connect to each burst
+buffer nodes in the map, and start I/O with these burst buffer nodes.
 
-In order to monitor workload of each I/O nodes, and make load balanced, I/O nodes send a signal to
+In order to monitor workload of each burst buffer nodes, and make load balanced, burst buffer nodes send a signal to
 master at the start and the end of each data transfer.
 
 \subsection{Limitation}
 
 Since this is a prototype of our proposal system, there are several limitations.
-First, in this prototype implementation, both master node and I/O nodes use one thread, it means
+First, in this prototype implementation, both master node and burst buffer nodes use one thread, it means
 there is only one request can be responded at any time.
 this design may cause master easily becoming a bottleneck when the number of client increase.
-Also, since at any time one I/O node can transfer data with only one client, when the bandwidth of
-I/O node larger than compute node, it will cause the I/O node under utilization.
+Also, since at any time one burst buffer node can transfer data with only one client, when the bandwidth of
+burst buffer node larger than compute node, it will cause the burst buffer node under utilization.
 However, there are some difficulties to change to a multiple threads version, for example, there
-is a dependency between read from shared storage and send to compute nodes request, I/O nodes should
+is a dependency between read from shared storage and send to compute nodes request, burst buffer nodes should
 block the reading request from compute nodes until the read from shared storage finished also
 synchronization is needed among read and write operations.
 
-Second, one I/O node one data chunk design simplified master's design, but it also brings several
+Second, one burst buffer node one data chunk design simplified master's design, but it also brings several
 limitations. It is difficult to change the file size after buffered it, as well as it reduce the
 benefit gain by using dirty flag.
 
