--- a/paper/src/introduction.tex
+++ b/paper/src/introduction.tex
@@ -78,7 +78,10 @@ absorbing bursty I/O requests from applications running on supercomputers
 Because most of HPC applications have data access
 locality, if we cache data, which is accessed in near future, on the burst
 buffers, we can accelerate the access performance to the data
-\xtqmod{\cite{montage,povray}}\kento{citation for applications having data access locality}.
+\cite{montage,povray,
+Intrinsic_data_locality_of_modern_scientific_workloads,
+Data_locality_characterization_of_OLTP,
+Analyzing_data_locality_in_numeric_applications}.
 In addition, if we apply burst buffers to clouds, we can build on-demand burst
 buffers by taking advantage of the elasticity in clouds. 
 To explore the effectiveness of burst buffers in clouds, 
